--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <body>
+<center>
+		<img height="720" width="100%" src="https://i.ibb.co/s1JDgWk/Copy-of-MOD-APK.png"/>
+      
+    <br />
+	<p><a href="https://telegram.me/Streamable_cinemas">
+<img src="https://lh3.googleusercontent.com/-T8I357fL-eA/YBkJvmaCQpI/AAAAAAAADrY/wwYLrIqLFOkwf658ZLiFReTLm64Wc_dhgCLcBGAsYHQ/h85/join-our-telegram-channel-300x71.png" alt="Join telegram channel" width="300" height="71">
+</a></p>
 
+      <br />
+  </center>
 </body>
 </html>
